--- a/index.html
+++ b/index.html
@@ -185,14 +185,17 @@
                     8010 Graz</li>
             </div>
         </div>
-        <div style='height:320px;width:100%;'>
-            <iframe width="" height="320" src=https://maps.google.de/maps?hl=de&q=%20Elisabethstrasse+84%20Graz&t=&z=14&ie=utf8&iwloc=b&output=embed
-                    frameborder="0" scrolling="no" marginheight="0" marginwidth="0" style='height:320px;width:100%;'>
-            </iframe><p style="text-align:right;
+        <div style="margin: 20px">
+            <div style='height:320px;width:100%;'>
+                <iframe width="" height="320" src=https://maps.google.de/maps?hl=de&q=%20Elisabethstrasse+84%20Graz&t=&z=14&ie=utf8&iwloc=b&output=embed
+                        frameborder="0" scrolling="no" marginheight="0" marginwidth="0" style='height:320px;width:100%;'>
+                </iframe><p style="text-align:right;
                     margin:0px; padding-top:-10px; line-height:10px;font-size:10px;margin-top: -25px;">
-            <a href="http://www.checkpoll.de/google-maps-generator/" style="font-size:10px;"
-               target="_blank">Google Maps Generator</a> von <a href="https://www.on-projects.de/" style="font-size:10px;" title="Webdesign in Stuttgart" target="_blank">on-projects</a>
-        </p></div>
+                <a href="http://www.checkpoll.de/google-maps-generator/" style="font-size:10px;"
+                   target="_blank"></a>
+            </p>
+            </div>
+        </div>
     </div>
 </div>
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
