--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
 <div class="position-relative overflow-hidden p-3 p-md-5 m-md-3 text-center">
     <div class="col-md-5 p-lg-5 mx-auto my-5">
-        <h1 class="display-4 font-weight-normal">LOGO on TOUR</h1>
+        <h1 class="display-4 font-weight-bold" id="title-logo">LOGO on TOUR</h1>
         <h3>Helena Pernul, BSc</h3>
         <p class="lead font-weight-normal" style="margin-top: 2em">Mobile logopädische Praxis in Graz und Graz Umgebung</p>
     </div>
