changed text in first part

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                     in den eigenen vier Wänden zu erfahren.
                     Sowohl im Bereich der logopädischen Therapie mit
                     Kindern, als auch Erwachsenen oder betagten
-                    Personen stehe Ihnen gerne sowohl beratend und
+                    Personen stehe ich Ihnen gerne sowohl beratend und
                     therapeutisch zur Seite.
                 </li>
                 <br>
