Change Mail and Address

--- a/index.html
+++ b/index.html
@@ -178,10 +178,10 @@
         <div class="my-3 py-3">
             <h2 class="display-5">Kontakt</h2>
             <div class="lead">
-                <li>Mail: ??? Logo-on.tour@pernul.at, pernul@logo-
-                    on-tour.at</li>
+                <li>Mail: logopaedie.pernul@gmail.com</li>
                 <li>Tel.: 0660/4867242</li>
-                <li>Adresse: Elisabethstrasse 84/20
+                <li>Adresse: Primärversorgungszentrum Medius
+                    Leonhardplatz 3, 1. Stock
                     8010 Graz</li>
             </div>
         </div>
