--- a/index.html
+++ b/index.html
@@ -180,8 +180,8 @@
             <div class="lead">
                 <li>Mail: logopaedie.pernul@gmail.com</li>
                 <li>Tel.: 0660/4867242</li>
-                <li>Adresse: Primärversorgungszentrum Medius
-                    Leonhardplatz 3, 1. Stock
+                <li>Adresse: Primärversorgungszentrum Medius <br>
+                    Leonhardplatz 3, 1. Stock <br>
                     8010 Graz</li>
             </div>
         </div>
