--- a/index.html
+++ b/index.html
@@ -107,8 +107,8 @@
                 <br>
             <h2 class="display-5">Fortbildungen</h2>
             <div class="lead">
-                <li>Ausspracheprüfung für die Praxis (APP)
-                    Fortbildung zum Tracheostoma-Berater</li>
+                <li>Ausspracheprüfung für die Praxis (APP) </li>
+                <li>Fortbildung zum Tracheostoma-Berater</li>
                 <li>Sprechapraxietherapie bei schwerer Aphasie
                     (SpAT)</li>
             </div>
