--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             <h2 class="display-5">LOGO on TOUR</h2>
             <div class="lead">
                 <li align="justify">
-                    Ziel von LOGO on TOUR ist es, Ihnen und Ihren
+                    Hallo Ziel von LOGO on TOUR ist es, Ihnen und Ihren
                     Lieben zu ermöglichen, eine kompetente Therapie
                     in den eigenen vier Wänden zu erfahren.
                     Sowohl im Bereich der logopädischen Therapie mit
