--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
         <div class="my-3 py-3">
             <h2 class="display-5">LOGO on TOUR</h2>
             <div class="lead">
-                <li align="justify">
-                    Hallo Ziel von LOGO on TOUR ist es, Ihnen und Ihren
+                <li>
+                    Ziel von LOGO on TOUR ist es, Ihnen und Ihren
                     Lieben zu ermöglichen, eine kompetente Therapie
                     in den eigenen vier Wänden zu erfahren.
                     Sowohl im Bereich der logopädischen Therapie mit
