--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <div class="col-md-5 p-lg-5 mx-auto my-5">
         <h1 class="display-4 font-weight-bold" id="title-logo">LOGO on TOUR</h1>
         <h3>Helena Pernul, BSc</h3>
-        <p class="lead font-weight-normal" style="margin-top: 2em">Mobile logopädische Praxis in Graz und Graz Umgebung</p>
+        <p class="lead font-weight-normal" style="margin-top: 2em" align="center">Mobile logopädische Praxis in Graz und Graz Umgebung</p>
     </div>
     <div class="product-device shadow-sm d-none d-md-block"></div>
     <div class="product-device product-device-2 shadow-sm d-none d-md-block"></div>
