--- a/index.html
+++ b/index.html
@@ -174,6 +174,13 @@
             </div>
             <br>
             <p class="lead">Die Terminvergabe erfolgt telefonisch unter: 0660/4867242</p>
+            <br>
+            <p class="lead">Termine nach Vereinbarung:</p>
+            <div class="lead">
+                <li>Mo, Mi, Do, Fr: 16:00 bis 20:00 Hausbesuche</li>
+                <li>Di: 16:00 bis 20:00 in den Praxisräumen</li>
+                <li>60 Minuten 80€</li>
+            </div>
         </div>
     </div>
 
