--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
         </div>
         <div style="margin: 20px">
             <div style='height:320px;width:100%;'>
-                <iframe width="" height="320" src=https://maps.google.de/maps?hl=de&q=%20Elisabethstrasse+84%20Graz&t=&z=14&ie=utf8&iwloc=b&output=embed
+                <iframe width="" height="320" src=https://maps.google.de/maps?hl=de&q=%20Medius+Zentrum+für+Gesundheit,+Hausärzte+für+alle+Kassen%20Graz&t=&z=14&ie=utf8&iwloc=b&output=embed
                         frameborder="0" scrolling="no" marginheight="0" marginwidth="0" style='height:320px;width:100%;'>
                 </iframe><p style="text-align:right;
                     margin:0px; padding-top:-10px; line-height:10px;font-size:10px;margin-top: -25px;">
