--- a/index.html
+++ b/index.html
@@ -122,9 +122,9 @@
         <div class="my-3 p-3">
             <h2 class="display-5">Schwerpunkte</h2>
             <div class="lead">
-                <p>Neurologische Sprach,- und Sprechstörungen (nach
+                <p><b>Neurologische Sprach,- und Sprechstörungen</b> (nach
                     Schlaganfällen, Schädel-Hirn-Traumata,
-                    fortschreitenden neurologischen Erkrankungen…)</p>
+                    fortschreitenden neurologischen Erkrankungen…):</p>
                 <li>Sprachstörungen (Aphasie und kognitive
                     Dysphasie)</li>
 
@@ -136,20 +136,20 @@
                 <li>Störung der „Sprechplanung“ (Sprechapraxie)</li>
                 <li>Demenz (und Primär Progressive Aphasie)</li>
                 <br>
-                <p>Schluckstörungen (Dysphagie) und
-                    Trachealkanülenmanagement</p>
-                <p>Störungen der mimischen Muskulatur</p>
+                <p><b>Schluckstörungen (Dysphagie) und
+                    Trachealkanülenmanagement</b></p>
+                <p><b>Störungen der mimischen Muskulatur:</b></p>
                 <li>Gesichtslähmungen (Fazialisparesen)</li>
                 <li>Zungenlähmungen (Hypoglossusparesen)</li>
                 <li>Muskelschwächen im Gesichtsbereich
                     (Myofunktionelle Störungen)</li>
                 <br>
-                <p>Stimmstörungen</p>
+                <p><b>Stimmstörungen:</b></p>
                 <li>Organische (z.B. Stimmlippenknötchen),
                     funktionelle (falsche Nutzung) und psychogene
                     Dysphonien</li>
                 <br>
-                <p>Spracherwerbsstörungen</p>
+                <p><b>Spracherwerbsstörungen:</b></p>
                 <li>Aussprachestörungen (Phonetische und
                     phonologische Störungen)</li>
                 <li>Grammatikalische Störungen
