--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     <div class="bg-dark mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center text-white overflow-hidden" id="logo">
         <div class="my-3 py-3">
             <h2 class="display-5">LOGO on TOUR</h2>
-            <div class="lead">
+            <ul class="lead">
                 <li>
                     Ziel von LOGO on TOUR ist es, Ihnen und Ihren
                     Lieben zu ermöglichen, eine kompetente Therapie
@@ -69,7 +69,7 @@
                 <li>Einsatzgebiet:
                     Bezirke Graz und Graz Umgebung
                 </li>
-            </div>
+            </ul>
         </div>
         <img src="img/abstract-abstract-art-abstract-painting-1293120.jpg" alt="" style="width: 80%; height: 300px; border-radius: 21px 21px 0 0;">
     </div>
@@ -107,12 +107,12 @@
                 <br>
                 <br>
             <h2 class="display-5">Fortbildungen</h2>
-            <div class="lead">
+            <ul class="lead">
                 <li>Ausspracheprüfung für die Praxis (APP) </li>
                 <li>Fortbildung zum Tracheostoma-Berater</li>
                 <li>Sprechapraxietherapie bei schwerer Aphasie
                     (SpAT)</li>
-            </div>
+            </ul>
         </div>
         <section id="profil">
             <img src="img/profil.jpg" alt="profil-bild">
@@ -125,37 +125,45 @@
                 <p><b>Neurologische Sprach,- und Sprechstörungen</b> (nach
                     Schlaganfällen, Schädel-Hirn-Traumata,
                     fortschreitenden neurologischen Erkrankungen…):</p>
-                <li>Sprachstörungen (Aphasie und kognitive
-                    Dysphasie)</li>
+                <ul>
+                    <li>Sprachstörungen (Aphasie und kognitive
+                        Dysphasie)</li>
 
-                <li>Lese- und Schreibstörungen (Dyslexie und
-                    Dysgraphie)</li>
+                    <li>Lese- und Schreibstörungen (Dyslexie und
+                        Dysgraphie)</li>
 
-                <li>Sprech-, Stimm- und Atemstörungen
-                    (Dysarthophonie)</li>
-                <li>Störung der „Sprechplanung“ (Sprechapraxie)</li>
-                <li>Demenz (und Primär Progressive Aphasie)</li>
+                    <li>Sprech-, Stimm- und Atemstörungen
+                        (Dysarthophonie)</li>
+                    <li>Störung der „Sprechplanung“ (Sprechapraxie)</li>
+                    <li>Demenz (und Primär Progressive Aphasie)</li>
+                </ul>
                 <br>
                 <p><b>Schluckstörungen (Dysphagie) und
                     Trachealkanülenmanagement</b></p>
                 <p><b>Störungen der mimischen Muskulatur:</b></p>
-                <li>Gesichtslähmungen (Fazialisparesen)</li>
-                <li>Zungenlähmungen (Hypoglossusparesen)</li>
-                <li>Muskelschwächen im Gesichtsbereich
-                    (Myofunktionelle Störungen)</li>
+                <ul>
+                    <li>Gesichtslähmungen (Fazialisparesen)</li>
+                    <li>Zungenlähmungen (Hypoglossusparesen)</li>
+                    <li>Muskelschwächen im Gesichtsbereich
+                        (Myofunktionelle Störungen)</li>
+                </ul>
                 <br>
                 <p><b>Stimmstörungen:</b></p>
-                <li>Organische (z.B. Stimmlippenknötchen),
-                    funktionelle (falsche Nutzung) und psychogene
-                    Dysphonien</li>
+                <ul>
+                    <li>Organische (z.B. Stimmlippenknötchen),
+                        funktionelle (falsche Nutzung) und psychogene
+                        Dysphonien</li>
+                </ul>
                 <br>
                 <p><b>Spracherwerbsstörungen:</b></p>
-                <li>Aussprachestörungen (Phonetische und
-                    phonologische Störungen)</li>
-                <li>Grammatikalische Störungen
-                    (Dysgrammatismus)</li>
-                <li>Sprachentwicklungsstörungen und
-                    -verzögerungen</li>
+                <ul>
+                    <li>Aussprachestörungen (Phonetische und
+                        phonologische Störungen)</li>
+                    <li>Grammatikalische Störungen
+                        (Dysgrammatismus)</li>
+                    <li>Sprachentwicklungsstörungen und
+                        -verzögerungen</li>
+                </ul>
             </div>
         </div>
     </div>
@@ -167,32 +175,32 @@
             <h2 class="display-5">Tarife und Verträge</h2>
             <p class="lead">Die Tarife orientieren sich an den Tarifvorschlägen
                 des Verbandes „logopädieaustria“:
-            <div class="lead">
+            <ul class="lead">
                 <li>30 Minuten 40€</li>
                 <li>45 Minuten 60€</li>
                 <li>60 Minuten 80€</li>
-            </div>
+            </ul>
             <br>
             <p class="lead">Die Terminvergabe erfolgt telefonisch unter: 0660/4867242</p>
             <br>
             <p class="lead">Termine nach Vereinbarung:</p>
-            <div class="lead">
+            <ul class="lead">
                 <li>Mo, Mi, Do, Fr: 16:00 bis 20:00 Hausbesuche</li>
                 <li>Di: 16:00 bis 20:00 in den Praxisräumen</li>
-            </div>
+            </ul>
         </div>
     </div>
 
     <div class="bg-light mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center overflow-hidden" id="kontakt">
         <div class="my-3 py-3">
             <h2 class="display-5">Kontakt</h2>
-            <div class="lead">
+            <ul class="lead">
                 <li>Mail: logopaedie.pernul@gmail.com</li>
                 <li>Tel.: 0660/4867242</li>
                 <li>Adresse: Primärversorgungszentrum Medius <br>
                     Leonhardplatz 3, 1. Stock <br>
                     8010 Graz</li>
-            </div>
+            </ul>
         </div>
         <div style="margin: 20px">
             <div style='height:320px;width:100%;'>
