changed text in first div

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                     in den eigenen vier Wänden zu erfahren.
                     Sowohl im Bereich der logopädischen Therapie mit
                     Kindern, als auch Erwachsenen oder betagten
-                    Personen stehe ich Ihnen gerne sowohl beratend und
+                    Personen stehe ich Ihnen gerne sowohl beratend als auch
                     therapeutisch zur Seite.
                 </li>
                 <br>
