Change Helena´s image

--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
             </ul>
         </div>
         <section id="profil">
-            <img src="img/profil.jpg" alt="profil-bild">
+            <img src="img/helena_bild.jpg" alt="profil-bild">
         </section>
     </div>
     <div class="bg-dark mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center text-white overflow-hidden" id="punkt">
