--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 <div class="position-relative overflow-hidden p-3 p-md-5 m-md-3 text-center">
     <div class="col-md-5 p-lg-5 mx-auto my-5">
         <h1 class="display-4 font-weight-bold" id="title-logo">LOGO on TOUR</h1>
-        <h3>Helena Pernul, BSc</h3>
+        <h3>Helena Pernul, BSc, Wahllogopädin</h3>
         <h4 class="lead font-weight-normal" style="margin-top: 2em">Mobile logopädische Praxis in Graz und Graz Umgebung</h4>
     </div>
     <div class="product-device shadow-sm d-none d-md-block"></div>
@@ -180,6 +180,9 @@
                 <li>45 Minuten 60€</li>
                 <li>60 Minuten 80€</li>
             </ul>
+            <br>
+            <p class="lead">Wahllogopädin für alle Kassen, je nach Krankenkasse wird ein bestimmter Anteil 
+                des Betrages rückerstattet (Zuweisung und Zahlungsbestätigung sowie Befund sind Voraussetzung)</p>
             <br>
             <p class="lead">Die Terminvergabe erfolgt telefonisch unter: 0660/4867242</p>
             <br>
