--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
             </ul>
             <br>
             <p class="lead">Wahllogopädin für alle Kassen, je nach Krankenkasse wird ein bestimmter Anteil 
-                des Betrages rückerstattet (Zuweisung und Zahlungsbestätigung sowie Befund sind Voraussetzung)</p>
+                des Betrages rückerstattet (Zuweisung und Zahlungsbestätigung sowie Befund sind Voraussetzung).</p>
             <br>
             <p class="lead">Die Terminvergabe erfolgt telefonisch unter: 0660/4867242</p>
             <br>
