--- a/index.html
+++ b/index.html
@@ -204,16 +204,17 @@
                     Leonhardplatz 3, 1. Stock <br>
                     8010 Graz</li>
             </ul>
-        </div>
-        <div style="margin: 20px">
+            <div style="margin: 20px">
             <div style='height:320px;width:100%;'>
                 <iframe width="" height="320" src=https://maps.google.de/maps?hl=de&q=%20Medius+Zentrum+für+Gesundheit,+Hausärzte+für+alle+Kassen%20Graz&t=&z=14&ie=utf8&iwloc=b&output=embed
                         frameborder="0" scrolling="no" marginheight="0" marginwidth="0" style='height:320px;width:100%;'>
-                </iframe><p style="text-align:right;
-                    margin:0px; padding-top:-10px; line-height:10px;font-size:10px;margin-top: -25px;">
-                <a href="http://www.checkpoll.de/google-maps-generator/" style="font-size:10px;"
-                   target="_blank"></a>
-            </p>
+                </iframe>
+                <p style="text-align:right;
+                        margin:0px; padding-top:-10px; line-height:10px;font-size:10px;margin-top: -25px;">
+                    <a href="http://www.checkpoll.de/google-maps-generator/" style="font-size:10px;"
+                       target="_blank"></a>
+                </p>
+                </div>
             </div>
         </div>
     </div>
