img-wrapper html

--- a/index.html
+++ b/index.html
@@ -71,7 +71,10 @@
                 </li>
             </ul>
         </div>
-        <img src="img/abstract-abstract-art-abstract-painting-1293120.jpg" alt="" style="width: 80%; height: 300px; border-radius: 21px 21px 0 0;">
+        <div class="div-wrapper">
+            <img src="img/abstract-abstract-art-abstract-painting-1293120.jpg" alt="" style="width: 80%; height: 300px; border-radius: 21px 21px 0 0;">
+    
+        </div>
     </div>
     <div class="bg-light mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center overflow-hidden" id="was">
         <div class="my-3 py-3">
@@ -89,7 +92,9 @@
                 mit Klienten mit neurologischen Störungen.
             </p>
         </div>
-        <img src="img/abstract-abstract-art-abstract-painting-1293120.jpg" alt="" style="width: 80%; height: 300px; border-radius: 21px 21px 0 0;">
+        <div class="div-wrapper">
+            <img src="img/abstract-abstract-art-abstract-painting-1293120.jpg" alt="" style="width: 80%; height: 300px; border-radius: 21px 21px 0 0;">
+        </div>
     </div>
 </div>
 
