--- a/index.html
+++ b/index.html
@@ -203,17 +203,22 @@
                     8010 Graz</li>
             </ul>
             <div style="margin: 20px">
-            <div style='height:320px;width:100%;'>
-                <iframe width="" height="320" src=https://maps.google.de/maps?hl=de&q=%20Medius+Zentrum+für+Gesundheit,+Hausärzte+für+alle+Kassen%20Graz&t=&z=14&ie=utf8&iwloc=b&output=embed
-                        frameborder="0" scrolling="no" marginheight="0" marginwidth="0" style='height:320px;width:100%;'>
-                </iframe>
-                <p style="text-align:right;
-                        margin:0px; padding-top:-10px; line-height:10px;font-size:10px;margin-top: -25px;">
-                    <a href="http://www.checkpoll.de/google-maps-generator/" style="font-size:10px;"
-                       target="_blank"></a>
-                </p>
+                <div style='height:320px;width:100%;'>
+                    <iframe width="" height="320" src=https://maps.google.de/maps?hl=de&q=%20Medius+Zentrum+für+Gesundheit,+Hausärzte+für+alle+Kassen%20Graz&t=&z=14&ie=utf8&iwloc=b&output=embed
+                            frameborder="0" scrolling="no" marginheight="0" marginwidth="0" style='height:320px;width:100%;'>
+                    </iframe>
+                    <p style="text-align:right;
+                            margin:0px; padding-top:-10px; line-height:10px;font-size:10px;margin-top: -25px;">
+                        <a href="http://www.checkpoll.de/google-maps-generator/" style="font-size:10px;"
+                           target="_blank"></a>
+                    </p>
                 </div>
             </div>
+            <p><b>Impressum: </b>Helena Pernul, BSc, LOGO on TOUR, Logopädische Praxis im Raum Graz, Graz-Umgebung, Leonhardplatz 3,
+                8010 Graz, Zur Behandlung von Sprach-, Sprech-, Stimm- und Schluckstörungen,
+                www.logo-on-tour-pernul.at, 0660 4867242, logopaedie.pernul@gmail.com, Es wird keine Haftung für Schäden, welche durch die
+                Nutzung der Website entstehen könnten, übernommen.
+            </p>
         </div>
     </div>
 </div>
