--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
             </div>
             <p><b>Impressum: </b>Helena Pernul, BSc, LOGO on TOUR, Logopädische Praxis im Raum Graz, Graz-Umgebung, Leonhardplatz 3,
                 8010 Graz, Zur Behandlung von Sprach-, Sprech-, Stimm- und Schluckstörungen,
-                www.logo-on-tour-pernul.at, 0660 4867242, logopaedie.pernul@gmail.com, Es wird keine Haftung für Schäden, welche durch die
+                www.logo-on-tour-pernul.at, 0660/4867242, logopaedie.pernul@gmail.com, Es wird keine Haftung für Schäden, welche durch die
                 Nutzung der Website entstehen könnten, übernommen.
             </p>
         </div>
