--- a/index.html
+++ b/index.html
@@ -172,12 +172,13 @@
         <div class="my-3 p-3">
             <h2 class="display-5">Tarife und Verträge</h2>
             <p class="lead">Die Tarife orientieren sich an den Tarifvorschlägen
-                des Verbandes „logopädieaustria“:
+                des Verbandes „logopädieaustria“:</p>
             <ul class="lead">
                 <li>30 Minuten 40€</li>
                 <li>45 Minuten 60€</li>
                 <li>60 Minuten 80€</li>
             </ul>
+            <p class="lead">Zuzüglich: Amtliches Kilometergeld von 0,42 €/km</p>
             <br>
             <p class="lead">Wahllogopädin für alle Kassen, je nach Krankenkasse wird ein bestimmter Anteil 
                 des Betrages rückerstattet (Zuweisung und Zahlungsbestätigung sowie Befund sind Voraussetzung).</p>
