--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
 <div class="position-relative overflow-hidden p-3 p-md-5 m-md-3 text-center">
     <div class="col-md-5 p-lg-5 mx-auto my-5">
         <h1 class="display-4 font-weight-bold" id="title-logo">LOGO on TOUR</h1>
-        <h3>Helena Pernul, BSc, Wahllogopädin</h3>
-        <h4 class="lead font-weight-normal" style="margin-top: 2em">Mobile logopädische Praxis in Graz und Graz Umgebung</h4>
+        <h3>Helena Pernul, BSc, Ihre Wahllogopädin in Graz und Bruck/Mur</h3>
+        <h4 class="lead font-weight-normal" style="margin-top: 2em">Mobile Logopädie in Graz, Graz Umgebung, Bruck/Mur und Kapfenberg</h4>
     </div>
     <div class="product-device shadow-sm d-none d-md-block"></div>
     <div class="product-device product-device-2 shadow-sm d-none d-md-block"></div>
@@ -63,11 +63,11 @@
                     Sowohl im Bereich der logopädischen Therapie mit
                     Kindern, als auch Erwachsenen oder betagten
                     Personen stehe ich Ihnen gerne sowohl beratend als auch
-                    therapeutisch zur Seite.
+                    therapeutisch als Logopädin zur Seite.
                 </li>
                 <br>
                 <li>Einsatzgebiet:
-                    Bezirke Graz und Graz Umgebung
+                    Bezirke Graz und Graz Umgebung, Raum Bruck/Mur und Kapfenberg
                 </li>
             </ul>
         </div>
