--- a/index.html
+++ b/index.html
@@ -66,8 +66,9 @@
                     therapeutisch als Logopädin zur Seite.
                 </li>
                 <br>
-                <li>Einsatzgebiet:
-                    Bezirke Graz und Graz Umgebung, Raum Bruck/Mur und Kapfenberg
+                <li>Einsatzgebiete:
+                    Mobile Logopädie in den Bezirken Graz und Graz Umgebung, im Raum Bruck/Mur und Kapfenberg,
+                    Praxisräume in Graz und ab Oktober 2019 auch in Bruck/Mur 
                 </li>
             </ul>
         </div>
