--- a/index.html
+++ b/index.html
@@ -189,8 +189,8 @@
             <br>
             <p class="lead">Termine nach Vereinbarung:</p>
             <ul class="lead">
-                <li>Mo, Mi, Do, Fr: 16:00 bis 20:00 Hausbesuche</li>
-                <li>Di: 16:00 bis 20:00 in den Praxisräumen</li>
+                <li>Mo, Mi, Do, Fr: 15:00 bis 20:00 Hausbesuche</li>
+                <li>Di: 15:00 bis 20:00 in den Praxisräumen in Graz</li>
             </ul>
         </div>
     </div>
