--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
             </div>
             <div>
                 <p>
-                    <font size="2"><b>Impressum: </b>Helena Pernul, BSc, Logopädin, LOGO on TOUR, Logopädische Praxis im Raum Graz, Graz-Umgebung, 
+                    <font size="2"><b>Impressum: </b>Helena Pernul, BSc, Logopädin, LOGO on TOUR, Logopädische Praxis im Raum Graz, Graz-Umgebung, Bruck/Mur und Kapfenberg, 
                         Leonhardplatz 3, 8010 Graz, Zur Behandlung von Sprach-, Sprech-, Stimm- und Schluckstörungen,
                         www.logo-on-tour-pernul.at, 0660/4867242, logopaedie.pernul@gmail.com, Es wird keine Haftung für Schäden, welche durch die
                         Nutzung der Website entstehen könnten, übernommen.
