--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@
                 </li>
                 <br>
                 <li>Einsatzgebiete:
-                    Mobile Logopädie in den Bezirken Graz und Graz Umgebung, im Raum Bruck/Mur und Kapfenberg,
-                    Praxisräume in Graz und ab Oktober 2019 auch in Bruck/Mur 
+                    Praxisräume in Graz und ab Oktober 2019 auch in Bruck/Mur,
+                    Hausbesuche in den Bezirken Graz, Graz Umgebung und im Raum Bruck an der Mur und Kapfenberg
                 </li>
             </ul>
         </div>
@@ -191,6 +191,7 @@
             <ul class="lead">
                 <li>Mo, Mi, Do, Fr: 15:00 bis 20:00 Hausbesuche</li>
                 <li>Di: 15:00 bis 20:00 in den Praxisräumen in Graz</li>
+                <li>Ab Oktober 2019 auch in den Praxisräumen in Bruck an der Mur</li>
             </ul>
         </div>
     </div>
