margins and paddings

--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
     </div>
 </nav>
 
-<div class="position-relative overflow-hidden p-3 p-md-5 m-md-3 text-center">
-    <div class="col-md-5 p-lg-5 mx-auto my-5">
+<div class="position-relative overflow-hidden p-3 p-md-1 m-md-1 text-center">
+    <div class="col-md-5 p-lg-3 mx-auto my-3">
         <h1 class="display-4 font-weight-bold" id="title-logo">LOGO on TOUR</h1>
         <h3>Helena Pernul, BSc, Ihre Wahllogopädin in Graz und Bruck/Mur</h3>
         <h4 class="lead font-weight-normal" style="margin-top: 2em">Mobile Logopädie in Graz, Graz Umgebung, Bruck/Mur und Kapfenberg</h4>
@@ -52,9 +52,9 @@
 </div>
 
 <div class="d-md-flex flex-md-equal w-100 my-md-3 pl-md-3">
-    <div class="bg-dark mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center text-white overflow-hidden" id="logo">
-        <div class="my-3 py-3">
-            <h2 class="display-5">LOGO on TOUR</h2>
+    <div class="bg-dark mr-md-3 pt-3 px-3 pt-md-4 px-md-5 text-center text-white overflow-hidden" id="logo">
+        <div class="mb-3 pb-3">
+            <h2 class="display-5 mb-4">LOGO on TOUR</h2>
             <ul class="lead">
                 <li>
                     Ziel von LOGO on TOUR ist es, Ihnen und Ihren
@@ -73,9 +73,9 @@
             </ul>
         </div>
     </div>
-    <div class="bg-light mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center overflow-hidden" id="was">
-        <div class="my-3 py-3">
-            <h2 class="display-5">Logopädie, was ist das?</h2>
+    <div class="bg-light mr-md-3 pt-3 px-3 pt-md-4 px-md-5 text-center overflow-hidden" id="was">
+        <div class="mb-3 pb-3">
+            <h2 class="display-5  mb-4">Logopädie, was ist das?</h2>
             <p class="lead">Die Logopädie beschäftigt sich mit den Teilbereichen
                 Stimme, Sprechen, Sprache, Schlucken und Hören.
                 In den logopädischen Fachbereich fallen sowohl
@@ -93,9 +93,9 @@
 </div>
 
 <div class="d-md-flex flex-md-equal w-100 my-md-3 pl-md-3">
-    <div class="bg-light mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center overflow-hidden" id="about">
-        <div class="my-3 py-3">
-            <h2 class="display-5">Über mich</h2>
+    <div class="bg-light mr-md-3 pt-3 px-3 pt-md-4 px-md-5 text-center overflow-hidden" id="about">
+        <div class="mb-3 pb-3">
+            <h2 class="display-5 mb-4">Über mich</h2>
             <p class="lead">Mein Name ist Helena Pernul. Ich stamme aus
                 Hermagor in Kärnten. Im Jahr 2016 habe ich nach
                 dreijährigem Studium meine Ausbildung zur
@@ -105,7 +105,7 @@
                 Therapiezentrum Kapfenberg als Logopädin.</p>
                 <br>
                 <br>
-            <h2 class="display-5">Fortbildungen</h2>
+            <h2 class="display-5 mb-4">Fortbildungen</h2>
             <ul class="lead">
                 <li>Ausspracheprüfung für die Praxis (APP) </li>
                 <li>Fortbildung zum Tracheostoma-Berater</li>
@@ -117,9 +117,9 @@
             <img src="img/helena_bild.jpg" alt="profil-bild">
         </section>
     </div>
-    <div class="bg-dark mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center text-white overflow-hidden" id="punkt">
-        <div class="my-3 p-3">
-            <h2 class="display-5">Schwerpunkte</h2>
+    <div class="bg-dark mr-md-3 pt-3 px-3 pt-md-4 px-md-5 text-center text-white overflow-hidden" id="punkt">
+        <div class="mb-3 px-3 pb-3">
+            <h2 class="display-5 mb-4">Schwerpunkte</h2>
             <div class="lead">
                 <p><b>Neurologische Sprach,- und Sprechstörungen</b> (nach
                     Schlaganfällen, Schädel-Hirn-Traumata,
@@ -169,9 +169,9 @@
 </div>
 
 <div class="d-md-flex flex-md-equal w-100 my-md-3 pl-md-3">
-    <div class="bg-dark mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center text-white overflow-hidden" id="tarif">
-        <div class="my-3 p-3">
-            <h2 class="display-5">Tarife und Verträge</h2>
+    <div class="bg-dark mr-md-3 pt-3 px-3 pt-md-4 px-md-5 text-center text-white overflow-hidden" id="tarif">
+        <div class="mb-3 px-3 pb-3">
+            <h2 class="display-5  mb-4">Tarife und Verträge</h2>
             <p class="lead">Die Tarife orientieren sich an den Tarifvorschlägen
                 des Verbandes „logopädieaustria“:</p>
             <ul class="lead">
@@ -196,9 +196,9 @@
         </div>
     </div>
 
-    <div class="bg-light mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center overflow-hidden" id="kontakt">
-        <div class="my-3 py-3">
-            <h2 class="display-5">Kontakt</h2>
+    <div class="bg-light mr-md-3 pt-3 px-3 pt-md-4 px-md-5 text-center overflow-hidden" id="kontakt">
+        <div class="mb-3 pb-3">
+            <h2 class="display-5 mb-4">Kontakt</h2>
             <ul class="lead">
                 <li>Mail: logopaedie.pernul@gmail.com</li>
                 <li>Tel.: 0660/4867242</li>
