--- a/index.html
+++ b/index.html
@@ -20,22 +20,19 @@
     <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
             <li class="nav-item">
-                <a class="nav-link" href="#logo">LOGO on TOUR</a>
+                <a class="nav-link" href="./index.html">LOGO on TOUR / Home</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#was">Logopädie, was ist das?</a>
+                <a class="nav-link" href="./uebermich.html">Über mich</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#punkt">Schwerpunkte</a>
+                <a class="nav-link" href="./schwerpunkte.html">Therapiebereiche</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#about">Über mich</a>
+                <a class="nav-link" href="./tarife.html">Tarife und Terminvergabe</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#tarif">Tarife und Verträge</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#tarif">Kontakt</a>
+                <a class="nav-link" href="./kontakt.html">Kontakt und Impressum</a>
             </li>
         </ul>
     </div>
@@ -92,144 +89,6 @@
     </div>
 </div>
 
-<div class="d-md-flex flex-md-equal w-100 my-md-3 pl-md-3">
-    <div class="bg-light mr-md-3 pt-3 px-3 pt-md-4 px-md-5 text-center overflow-hidden" id="about">
-        <div class="mb-3 pb-3">
-            <h2 class="display-5 mb-4">Über mich</h2>
-            <p class="lead">Mein Name ist Helena Pernul. Ich stamme aus
-                Hermagor in Kärnten. Im Jahr 2016 habe ich nach
-                dreijährigem Studium meine Ausbildung zur
-                Logopädin an der Fachhochschule Kärnten in
-                Klagenfurt abgeschlossen.
-                Seit September 2017 arbeite ich im neurologischen
-                Therapiezentrum Kapfenberg als Logopädin.</p>
-                <br>
-                <br>
-            <h2 class="display-5 mb-4">Fortbildungen</h2>
-            <ul class="lead">
-                <li>Ausspracheprüfung für die Praxis (APP) </li>
-                <li>Fortbildung zum Tracheostoma-Berater</li>
-                <li>Sprechapraxietherapie bei schwerer Aphasie
-                    (SpAT)</li>
-            </ul>
-        </div>
-        <section id="profil">
-            <img src="img/helena_bild.jpg" alt="profil-bild">
-        </section>
-    </div>
-    <div class="bg-dark mr-md-3 pt-3 px-3 pt-md-4 px-md-5 text-center text-white overflow-hidden" id="punkt">
-        <div class="mb-3 px-3 pb-3">
-            <h2 class="display-5 mb-4">Schwerpunkte</h2>
-            <div class="lead">
-                <p><b>Neurologische Sprach,- und Sprechstörungen</b> (nach
-                    Schlaganfällen, Schädel-Hirn-Traumata,
-                    fortschreitenden neurologischen Erkrankungen…):</p>
-                <ul>
-                    <li>Sprachstörungen (Aphasie und kognitive
-                        Dysphasie)</li>
-
-                    <li>Lese- und Schreibstörungen (Dyslexie und
-                        Dysgraphie)</li>
-
-                    <li>Sprech-, Stimm- und Atemstörungen
-                        (Dysarthophonie)</li>
-                    <li>Störung der „Sprechplanung“ (Sprechapraxie)</li>
-                    <li>Demenz (und Primär Progressive Aphasie)</li>
-                </ul>
-                <br>
-                <p><b>Schluckstörungen (Dysphagie) und
-                    Trachealkanülenmanagement</b></p>
-                <p><b>Störungen der mimischen Muskulatur:</b></p>
-                <ul>
-                    <li>Gesichtslähmungen (Fazialisparesen)</li>
-                    <li>Zungenlähmungen (Hypoglossusparesen)</li>
-                    <li>Muskelschwächen im Gesichtsbereich
-                        (Myofunktionelle Störungen)</li>
-                </ul>
-                <br>
-                <p><b>Stimmstörungen:</b></p>
-                <ul>
-                    <li>Organische (z.B. Stimmlippenknötchen),
-                        funktionelle (falsche Nutzung) und psychogene
-                        Dysphonien</li>
-                </ul>
-                <br>
-                <p><b>Spracherwerbsstörungen:</b></p>
-                <ul>
-                    <li>Aussprachestörungen (Phonetische und
-                        phonologische Störungen)</li>
-                    <li>Grammatikalische Störungen
-                        (Dysgrammatismus)</li>
-                    <li>Sprachentwicklungsstörungen und
-                        -verzögerungen</li>
-                </ul>
-            </div>
-        </div>
-    </div>
-</div>
-
-<div class="d-md-flex flex-md-equal w-100 my-md-3 pl-md-3">
-    <div class="bg-dark mr-md-3 pt-3 px-3 pt-md-4 px-md-5 text-center text-white overflow-hidden" id="tarif">
-        <div class="mb-3 px-3 pb-3">
-            <h2 class="display-5  mb-4">Tarife und Verträge</h2>
-            <p class="lead">Die Tarife orientieren sich an den Tarifvorschlägen
-                des Verbandes „logopädieaustria“:</p>
-            <ul class="lead">
-                <li>30 Minuten 40€</li>
-                <li>45 Minuten 60€</li>
-                <li>60 Minuten 80€</li>
-            </ul>
-            <br>
-            <p class="lead">Zuzüglich: Amtliches Kilometergeld von 0,42 €/km</p>
-            <br>
-            <p class="lead">Wahllogopädin für alle Kassen, je nach Krankenkasse wird ein bestimmter Anteil 
-                des Betrages rückerstattet (Zuweisung und Zahlungsbestätigung sowie Befund sind Voraussetzung).</p>
-            <br>
-            <p class="lead">Die Terminvergabe erfolgt telefonisch unter: 0660/4867242</p>
-            <br>
-            <p class="lead">Termine nach Vereinbarung:</p>
-            <ul class="lead">
-                <li>Mo, Mi, Do, Fr: 14:30 bis 20:00 Hausbesuche</li>
-                <li>Di: 16:00 bis 20:00 in den Praxisräumen in Graz</li>
-                <li>Ab Oktober 2019 auch in den Praxisräumen in Bruck an der Mur</li>
-            </ul>
-        </div>
-    </div>
-
-    <div class="bg-light mr-md-3 pt-3 px-3 pt-md-4 px-md-5 text-center overflow-hidden" id="kontakt">
-        <div class="mb-3 pb-3">
-            <h2 class="display-5 mb-4">Kontakt</h2>
-            <ul class="lead">
-                <li>Mail: logopaedie.pernul@gmail.com</li>
-                <li>Tel.: 0660/4867242</li>
-                <li>Adresse: Primärversorgungszentrum Medius <br>
-                    Leonhardplatz 3, 1. Stock <br>
-                    8010 Graz</li>
-            </ul>
-            <div style="margin: 20px">
-                <div style='height:320px;width:100%;'>
-                    <iframe width="" height="320" src=https://maps.google.de/maps?hl=de&q=%20Medius+Zentrum+für+Gesundheit,+Hausärzte+für+alle+Kassen%20Graz&t=&z=14&ie=utf8&iwloc=b&output=embed
-                            frameborder="0" scrolling="no" marginheight="0" marginwidth="0" style='height:320px;width:100%;'>
-                    </iframe>
-                    <p style="text-align:right;
-                            margin:0px; padding-top:-10px; line-height:10px;font-size:10px;margin-top: -25px;">
-                        <a href="http://www.checkpoll.de/google-maps-generator/" style="font-size:10px;"
-                           target="_blank"></a>
-                    </p>
-                </div>
-            </div>
-            <div>
-                <p>
-                    <font size="2"><b>Impressum: </b>Helena Pernul, BSc, Logopädin, LOGO on TOUR, Logopädische Praxis im Raum Graz, Graz-Umgebung, Bruck/Mur und Kapfenberg, 
-                        Leonhardplatz 3, 8010 Graz, Zur Behandlung von Sprach-, Sprech-, Stimm- und Schluckstörungen,
-                        www.logo-on-tour-pernul.at, 0660/4867242, logopaedie.pernul@gmail.com, Es wird keine Haftung für Schäden, welche durch die
-                        Nutzung der Website entstehen könnten, übernommen.
-                    </font>
-                </p>
-            </div>
-        </div>
-    </div>
-</div>
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
