--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
     <link href="style.css" rel="stylesheet">
     <title>LOGO on TOUR</title>
+
 </head>
 <body  style="background-color: #fc8f41">
 
@@ -41,8 +42,8 @@
 <div class="position-relative overflow-hidden p-3 p-md-1 m-md-1 text-center">
     <div class="col-md-5 p-lg-3 mx-auto my-3">
         <h1 class="display-4 font-weight-bold" id="title-logo">LOGO on TOUR</h1>
-        <h3>Helena Pernul, BSc, Ihre Wahllogopädin in Graz und Bruck/Mur</h3>
-        <h4 class="lead font-weight-normal" style="margin-top: 2em">Mobile Logopädie in Graz, Graz Umgebung, Bruck/Mur und Kapfenberg</h4>
+        <h2 class="display-5">Helena Pernul, BSc, Ihre Wahllogopädin in Graz und Bruck/Mur</h2>
+        <h3 class="lead font-weight-normal" style="margin-top: 2em">Mobile Logopädie in Graz, Graz Umgebung, Bruck/Mur und Kapfenberg</h3>
     </div>
     <div class="product-device shadow-sm d-none d-md-block"></div>
     <div class="product-device product-device-2 shadow-sm d-none d-md-block"></div>
@@ -51,7 +52,7 @@
 <div class="d-md-flex flex-md-equal w-100 my-md-3 pl-md-3">
     <div class="bg-dark mr-md-3 pt-3 px-3 pt-md-4 px-md-5 text-center text-white overflow-hidden" id="logo">
         <div class="mb-3 pb-3">
-            <h2 class="display-5 mb-4">LOGO on TOUR</h2>
+            <h4 class="display-5 mb-4">LOGO on TOUR</h4>
             <ul class="lead">
                 <li>
                     Ziel von LOGO on TOUR ist es, Ihnen und Ihren
@@ -68,11 +69,15 @@
                     Hausbesuche in den Bezirken Graz, Graz Umgebung und im Raum Bruck an der Mur und Kapfenberg
                 </li>
             </ul>
+            <br />
+            <section id="logologo">
+                <img src="img/logologo.jpg" alt="logo logo on tour">
+            </section>
         </div>
     </div>
     <div class="bg-light mr-md-3 pt-3 px-3 pt-md-4 px-md-5 text-center overflow-hidden" id="was">
         <div class="mb-3 pb-3">
-            <h2 class="display-5  mb-4">Logopädie, was ist das?</h2>
+            <h4 class="display-5  mb-4">Logopädie, was ist das?</h4>
             <p class="lead">Die Logopädie beschäftigt sich mit den Teilbereichen
                 Stimme, Sprechen, Sprache, Schlucken und Hören.
                 In den logopädischen Fachbereich fallen sowohl
@@ -85,6 +90,9 @@
                 Stimmstörungen im Erwachsenenalter und der Arbeit
                 mit Klienten mit neurologischen Störungen.
             </p>
+            <section id="kommunikation">
+                <img src="img/kommunikation2.jpg" alt="kommunikation">
+            </section>
         </div>
     </div>
 </div>
