--- a/schwerpunkte.html
+++ b/schwerpunkte.html
@@ -41,8 +41,8 @@
 <div class="position-relative overflow-hidden p-3 p-md-1 m-md-1 text-center">
     <div class="col-md-5 p-lg-3 mx-auto my-3">
         <h1 class="display-4 font-weight-bold" id="title-logo">LOGO on TOUR</h1>
-        <h3>Helena Pernul, BSc, Ihre Wahllogopädin in Graz und Bruck/Mur</h3>
-        <h4 class="lead font-weight-normal" style="margin-top: 2em">Mobile Logopädie in Graz, Graz Umgebung, Bruck/Mur und Kapfenberg</h4>
+        <h2>Helena Pernul, BSc, Ihre Wahllogopädin in Graz und Bruck/Mur</h2>
+        <h3 class="lead font-weight-normal" style="margin-top: 2em">Mobile Logopädie in Graz, Graz Umgebung, Bruck/Mur und Kapfenberg</h3>
     </div>
     <div class="product-device shadow-sm d-none d-md-block"></div>
     <div class="product-device product-device-2 shadow-sm d-none d-md-block"></div>
@@ -51,7 +51,7 @@
 <div class="d-md-flex flex-md-equal w-100 my-md-3 pl-md-3">
     <div class="bg-dark mr-md-3 pt-3 px-3 pt-md-4 px-md-5 text-center text-white overflow-hidden" id="schwerpunkte">
         <div class="mb-3 pb-3">
-            <h2 class="display-5 mb-4">Therapiebereiche</h2>
+            <h4 class="display-5 mb-4">Therapiebereiche</h4>
             <div class="lead">
                 <p><b>Neurologische Sprach,- und Sprechstörungen</b> (nach
                     Schlaganfällen, Schädel-Hirn-Traumata,
@@ -96,13 +96,21 @@
                         -verzögerungen</li>
                 </ul>
             </div>
+            <br />
+            <section id="sprachverstaendnis">
+                <img src="img/sprachverstaendnis.jpg" alt="sprachverstaendnis">
+            </section>
         </div>
     </div>
     <div class="bg-light mr-md-3 pt-3 px-3 pt-md-4 px-md-5 text-center overflow-hidden" id="informationen">
         <div class="mb-3 pb-3">
-            <h2 class="display-5  mb-4">Informationen</h2>
+            <h4 class="display-5  mb-4">Informationen</h4>
             <p class="lead">Hier werden in Kürze nützliche Informationen über verschiedene Störungen bereitstehen.
             </p>
+            <br />
+            <section id="buchstaben">
+                <img src="img/buchstaben.jpg" alt="buchstaben">
+            </section>
         </div>
     </div>
 </div>
