--- a/kontakt.html
+++ b/kontakt.html
@@ -41,8 +41,8 @@
 <div class="position-relative overflow-hidden p-3 p-md-1 m-md-1 text-center">
     <div class="col-md-5 p-lg-3 mx-auto my-3">
         <h1 class="display-4 font-weight-bold" id="title-logo">LOGO on TOUR</h1>
-        <h3>Helena Pernul, BSc, Ihre Wahllogopädin in Graz und Bruck/Mur</h3>
-        <h4 class="lead font-weight-normal" style="margin-top: 2em">Mobile Logopädie in Graz, Graz Umgebung, Bruck/Mur und Kapfenberg</h4>
+        <h2>Helena Pernul, BSc, Ihre Wahllogopädin in Graz und Bruck/Mur</h2>
+        <h3 class="lead font-weight-normal" style="margin-top: 2em">Mobile Logopädie in Graz, Graz Umgebung, Bruck/Mur und Kapfenberg</h3>
     </div>
     <div class="product-device shadow-sm d-none d-md-block"></div>
     <div class="product-device product-device-2 shadow-sm d-none d-md-block"></div>
@@ -51,7 +51,7 @@
 <div class="d-md-flex flex-md-equal w-100 my-md-3 pl-md-3">
     <div class="bg-dark mr-md-3 pt-3 px-3 pt-md-4 px-md-5 text-center text-white overflow-hidden" id="kontakt">
         <div class="mb-3 pb-3">
-            <h2 class="display-5 mb-4">Kontakt</h2>
+            <h4 class="display-5 mb-4">Kontakt</h4>
             <ul class="lead">
                 <li>Mail: logopaedie.pernul@gmail.com</li>
                 <li>Tel.: 0660/4867242</li>
@@ -61,16 +61,9 @@
                 <li>Adresse Bruck/Mur: Wird im Oktober bekanntgegeben</li>
             </ul>
             <br />
-            <br />
-            <div>
-                <p>
-                    <font size="2"><b>Impressum: </b>Helena Pernul, BSc, Logopädin, LOGO on TOUR, Logopädische Praxis im Raum Graz, Graz-Umgebung, Bruck/Mur und Kapfenberg, 
-                        Leonhardplatz 3, 8010 Graz, Zur Behandlung von Sprach-, Sprech-, Stimm- und Schluckstörungen,
-                        www.logo-on-tour-pernul.at, 0660/4867242, logopaedie.pernul@gmail.com, Es wird keine Haftung für Schäden, welche durch die
-                        Nutzung der Website entstehen könnten, übernommen.
-                    </font>
-                </p>
-            </div>
+            <section id="mediuspraxis">
+                <img src="img/mediuspraxis.jpg" alt="mediuspraxis">
+            </section>
         </div>
     </div>
     <div class="bg-light mr-md-3 pt-3 px-3 pt-md-4 px-md-5 text-center overflow-hidden" id="maps">
@@ -86,6 +79,17 @@
                             target="_blank"></a>
                     </p>
                 </div>
+            </div>
+            <br />
+            <br />
+            <div>
+                <p>
+                    <font size="2"><b>Impressum: </b>Helena Pernul, BSc, Logopädin, LOGO on TOUR, Logopädische Praxis im Raum Graz, Graz-Umgebung, Bruck/Mur und Kapfenberg, 
+                        Leonhardplatz 3, 8010 Graz, Zur Behandlung von Sprach-, Sprech-, Stimm- und Schluckstörungen,
+                        www.logo-on-tour-pernul.at, 0660/4867242, logopaedie.pernul@gmail.com, Es wird keine Haftung für Schäden, welche durch die
+                        Nutzung der Website entstehen könnten, übernommen.
+                    </font>
+                </p>
             </div>
         </div>
     </div>
