--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
     <link href="style.css" rel="stylesheet">
-    <title>LOGO on TOUR</title>
+    <title>LOGO on TOUR - mobile logopädische Praxis in Graz und Bruck/Mur</title>
 
 </head>
 <body  style="background-color: #fc8f41">
