--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 
     <link href="style.css" rel="stylesheet">
     <title>LOGO on TOUR - mobile logopädische Praxis in Graz und Bruck/Mur</title>
-
+    
+    <link rel="icon" type="image/png" href="img/logoicon.png">
 </head>
 <body  style="background-color: #fc8f41">
 
