--- a/tarife.html
+++ b/tarife.html
@@ -10,6 +10,8 @@
 
     <link href="style.css" rel="stylesheet">
     <title>LOGO on TOUR - Tarife und Terminvergabe</title>
+    
+    <link rel="icon" type="image/png" href="img/logoicon.png">
 </head>
 <body  style="background-color: #fc8f41">
 
