--- a/index.html
+++ b/index.html
@@ -66,13 +66,11 @@
             <h4 class="display-5 mb-4">LOGO on TOUR</h4>
             <ul class="lead">
                 <li>
-                    Ziel von LOGO on TOUR ist es, Ihnen und Ihren
-                    Lieben zu ermöglichen, eine kompetente Therapie
-                    in den eigenen vier Wänden zu erfahren.
-                    Sowohl im Bereich der logopädischen Therapie mit
-                    Kindern, als auch Erwachsenen oder betagten
-                    Personen stehe ich Ihnen gerne sowohl beratend als auch
-                    therapeutisch als Logopädin zur Seite.
+                    Ziel von LOGO on TOUR ist es, Ihnen und Ihren Lieben eine kompetente logopädische 
+                    Therapie zu ermöglichen. Diese kann in den logopädischen Praxisräumen, aber auch in 
+                    den eigenen vier Wänden erfolgen. Sowohl im Bereich der logopädischen Therapie mit
+                    Kindern, als auch Erwachsenen oder betagten Personen stehe ich Ihnen gerne 
+                    beratend und therapeutisch als Logopädin zur Seite.
                 </li>
                 <br>
                 <li>Einsatzgebiete:
