--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         </section>
     </div>
     <div class="col-md-6 p-lg-3 mx-auto my-3" id="centerheader">
-        <h1 class="display-4 font-weight-bold" id="title-logo">LOGO on TOUR</h1>
+        <h1 class="display-3 font-weight-bold" id="title-logo">LOGO on TOUR</h1>
         <h2 class="display-5">Helena Pernul, BSc, Ihre Wahllogopädin in Graz und Bruck/Mur</h2>
         <h3 class="lead font-weight-normal" style="margin-top: 2em">Mobile Logopädie in Graz, Graz Umgebung, Bruck/Mur und Kapfenberg</h3>
     </div>
@@ -48,7 +48,7 @@
                 <a class="nav-link" href="./uebermich.html">Über mich</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="./schwerpunkte.html">Therapiebereiche</a>
+                <a class="nav-link" href="./schwerpunkte.html">Therapiebereiche/FAQ</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="./tarife.html">Tarife und Terminvergabe</a>
@@ -63,21 +63,29 @@
 <div class="d-md-flex flex-md-equal w-100 my-md-3 pl-md-3">
     <div class="bg-dark mr-md-3 pt-3 px-3 pt-md-4 px-md-5 col-md-6 text-center text-white overflow-hidden" id="logo">
         <div class="mb-3 pb-3">
-            <h4 class="display-5 mb-4">LOGO on TOUR</h4>
+            <h1 class="display-5 mb-4">LOGO on TOUR - Logopädie in Graz und Bruck/Mur</h1>
+            <p class="lead">
+                Ziel von LOGO on TOUR ist es, Ihnen und Ihren Lieben eine kompetente logopädische Therapie 
+                    zu ermöglichen. Diese kann in den logopädischen Praxisräumen, aber auch in den eigenen vier 
+                    Wänden erfolgen.
+            </p>
+            <h2 class="display-5 mb-4 mt-5">Logopädie für Kinder und Erwachsene</h2>
+            <p class="lead">
+                Sowohl im Bereich der logopädischen Therapie mit Kindern, als auch Erwachsenen 
+                oder betagten Personen stehe ich Ihnen gerne beratend und therapeutisch als Logopädin zur Seite.
+                <br />
+                <br />
+                Einsatzgebiete:
+            </p>
             <ul class="lead">
-                <li>
-                    Ziel von LOGO on TOUR ist es, Ihnen und Ihren Lieben eine kompetente logopädische 
-                    Therapie zu ermöglichen. Diese kann in den logopädischen Praxisräumen, aber auch in 
-                    den eigenen vier Wänden erfolgen. Sowohl im Bereich der logopädischen Therapie mit
-                    Kindern, als auch Erwachsenen oder betagten Personen stehe ich Ihnen gerne 
-                    beratend und therapeutisch als Logopädin zur Seite.
-                </li>
-                <br>
-                <li>Einsatzgebiete:
-                    Praxisräume in Graz und ab Oktober 2019 auch in Bruck/Mur,
-                    Hausbesuche in den Bezirken Graz, Graz Umgebung und im Raum Bruck an der Mur und Kapfenberg
-                </li>
+                <li>Praxisräume in Graz</li>
+                <li>Ab Oktober 2019 auch in Bruck/Mur</li>
+                <li>Hausbesuche in den Bezirken Graz, Graz Umgebung und im Raum Bruck an der Mur und Kapfenberg</li>
             </ul>
+            <br />
+            <br />
+            <p class="lead">Ich freue mich auf Sie!</p>
+            <br />      
             <br />
             <section id="logologo">
                 <img src="img/logologo.jpg" alt="logo logo on tour">
@@ -86,7 +94,7 @@
     </div>
     <div class="bg-light mr-md-3 pt-3 px-3 pt-md-4 px-md-5 col-md-6 text-center overflow-hidden" id="was">
         <div class="mb-3 pb-3">
-            <h4 class="display-5  mb-4">Logopädie, was ist das?</h4>
+            <h1 class="display-5  mb-4">Logopädie, was ist das?</h1>
             <p class="lead">Die Logopädie beschäftigt sich mit den Teilbereichen
                 Stimme, Sprechen, Sprache, Schlucken und Hören.
                 In den logopädischen Fachbereich fallen sowohl
