--- a/kontakt.html
+++ b/kontakt.html
@@ -24,7 +24,7 @@
         </section>
     </div>
     <div class="col-md-6 p-lg-3 mx-auto my-3">
-        <h1 class="display-4 font-weight-bold" id="title-logo">LOGO on TOUR</h1>
+        <h1 class="display-3 font-weight-bold" id="title-logo">LOGO on TOUR</h1>
         <h2>Helena Pernul, BSc, Ihre Wahllogopädin in Graz und Bruck/Mur</h2>
         <h3 class="lead font-weight-normal" style="margin-top: 2em">Mobile Logopädie in Graz, Graz Umgebung, Bruck/Mur und Kapfenberg</h3>
     </div>
@@ -45,7 +45,7 @@
                 <a class="nav-link" href="./uebermich.html">Über mich</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="./schwerpunkte.html">Therapiebereiche</a>
+                <a class="nav-link" href="./schwerpunkte.html">Therapiebereiche/FAQ</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="./tarife.html">Tarife und Terminvergabe</a>
@@ -60,7 +60,7 @@
 <div class="d-md-flex flex-md-equal w-100 my-md-3 pl-md-3">
     <div class="bg-dark mr-md-3 pt-3 px-3 pt-md-4 px-md-5 col-md-6 text-center text-white overflow-hidden" id="kontakt">
         <div class="mb-3 pb-3">
-            <h4 class="display-5 mb-4">Kontakt</h4>
+            <h1 class="display-5 mb-4">Kontakt</h1>
             <ul class="lead">
                 <li>Mail: logopaedie.pernul@gmail.com</li>
                 <li>Tel.: 0660/4867242</li>
