--- a/schwerpunkte.html
+++ b/schwerpunkte.html
@@ -24,7 +24,7 @@
         </section>
     </div>
     <div class="col-md-6 p-lg-3 mx-auto my-3">
-        <h1 class="display-4 font-weight-bold" id="title-logo">LOGO on TOUR</h1>
+        <h1 class="display-3 font-weight-bold" id="title-logo">LOGO on TOUR</h1>
         <h2>Helena Pernul, BSc, Ihre Wahllogopädin in Graz und Bruck/Mur</h2>
         <h3 class="lead font-weight-normal" style="margin-top: 2em">Mobile Logopädie in Graz, Graz Umgebung, Bruck/Mur und Kapfenberg</h3>
     </div>
@@ -45,7 +45,7 @@
                 <a class="nav-link" href="./uebermich.html">Über mich</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="./schwerpunkte.html">Therapiebereiche</a>
+                <a class="nav-link" href="./schwerpunkte.html">Therapiebereiche/FAQ</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="./tarife.html">Tarife und Terminvergabe</a>
@@ -60,7 +60,12 @@
 <div class="d-md-flex flex-md-equal w-100 my-md-3 pl-md-3">
     <div class="bg-dark mr-md-3 pt-3 px-3 pt-md-4 px-md-5 col-md-6 text-center text-white overflow-hidden" id="schwerpunkte">
         <div class="mb-3 pb-3">
-            <h4 class="display-5 mb-4">Therapiebereiche</h4>
+            <h1 class="display-5 mb-4">Therapiebereiche - mobile Logopädie Graz</h1>
+            <p class="lead">
+                    In meiner logopädischen Praxis biete ich ein umfassendes Angebot für Sprach-, Sprech- und Schluckstörungen 
+                    sowie Störungen der mimischen Muskulatur an.
+            </p>
+            <h2 class="display-5 mb-4 mt-5">Therapieangebot in der logopädischen Praxis</h2>
             <div class="lead">
                 <p><b>Neurologische Sprach,- und Sprechstörungen</b> (nach
                     Schlaganfällen, Schädel-Hirn-Traumata,
@@ -106,6 +111,12 @@
                 </ul>
             </div>
             <br />
+            <h2 class="display-5 mb-4 mt-5">Mobile logopädische Praxis von Graz bis Kapfenberg</h2>
+            <p class="lead">
+                Um es für Sie und ihre Liebsten so einfach wie möglich zu gestalten, biete ich
+                Ihnen im Rahmen der mobilen Praxis an, zu Ihnen nach Hause zu kommen.
+            </p>
+            <br />
             <section id="sprachverstaendnis">
                 <img src="img/sprachverstaendnis.jpg" alt="sprachverstaendnis">
             </section>
@@ -113,7 +124,7 @@
     </div>
     <div class="bg-light mr-md-3 pt-3 px-3 pt-md-4 px-md-5 col-md-6 text-center overflow-hidden" id="informationen">
         <div class="mb-3 pb-3">
-            <h4 class="display-5  mb-4">Informationen</h4>
+            <h1 class="display-5  mb-4">Informationen</h1>
             <p class="lead">Hier werden in Kürze nützliche Informationen über verschiedene Störungen bereitstehen.
             </p>
             <br />
