--- a/tarife.html
+++ b/tarife.html
@@ -24,7 +24,7 @@
         </section>
     </div>
     <div class="col-md-6 p-lg-3 mx-auto my-3">
-        <h1 class="display-4 font-weight-bold" id="title-logo">LOGO on TOUR</h1>
+        <h1 class="display-3 font-weight-bold" id="title-logo">LOGO on TOUR</h1>
         <h2>Helena Pernul, BSc, Ihre Wahllogopädin in Graz und Bruck/Mur</h2>
         <h3 class="lead font-weight-normal" style="margin-top: 2em">Mobile Logopädie in Graz, Graz Umgebung, Bruck/Mur und Kapfenberg</h3>
     </div>
@@ -45,7 +45,7 @@
                 <a class="nav-link" href="./uebermich.html">Über mich</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="./schwerpunkte.html">Therapiebereiche</a>
+                <a class="nav-link" href="./schwerpunkte.html">Therapiebereiche/FAQ</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="./tarife.html">Tarife und Terminvergabe</a>
@@ -60,7 +60,7 @@
 <div class="d-md-flex flex-md-equal w-100 my-md-3 pl-md-3">
     <div class="bg-dark mr-md-3 pt-3 px-3 pt-md-4 px-md-5 col-md-6 text-center text-white overflow-hidden" id="tarif">
         <div class="mb-3 pb-3">
-            <h4 class="display-5 mb-4">Tarife</h4>
+            <h1 class="display-5 mb-4">Logopädische Praxis - Preisangebot</h1>
             <p class="lead">Die Tarife orientieren sich an den Tarifvorschlägen
                 des Verbandes „logopädieaustria“:</p>
             <ul class="lead">
@@ -69,16 +69,19 @@
                 <li>60 Minuten 80€</li>
             </ul>
             <br>
-            <p class="lead">Zuzüglich: Amtliches Kilometergeld von 0,42 €/km, ausgehend 
-                von den Praxen in Graz bzw. Bruck an der Mur</p>
-            <br>
             <p class="lead">Wahllogopädin für alle Kassen, je nach Krankenkasse wird ein bestimmter Anteil 
-                des Betrages rückerstattet (Zuweisung und Zahlungsbestätigung sowie Befund sind Voraussetzung).</p>
+                    des Betrages rückerstattet (Zuweisung und Zahlungsbestätigung sowie Befund sind Voraussetzung).</p>
+            
+            <h2 class="display-5 mb-4 mt-5">Mobile logopädische Praxis</h2>
+            <p class="lead">Zuzüglich wird ein amtliches Kilometergeld von 0,42 €/km ausgehend 
+                von den Praxen in Graz bzw. Bruck an der Mur verrechnet.</p>
+            <br>
+            
         </div>
     </div>
     <div class="bg-light mr-md-3 pt-3 px-3 pt-md-4 px-md-5 col-md-6 text-center overflow-hidden" id="termine">
         <div class="mb-3 pb-3">
-            <h4 class="display-5  mb-4">Terminvergabe</h4>
+            <h1 class="display-5  mb-4">Terminvergabe für die logopädische Therapie</h1>
             <p class="lead">Die Terminvergabe erfolgt telefonisch unter: 0660/4867242</p>
             <br>
             <p class="lead">Termine nach Vereinbarung:</p>
@@ -87,6 +90,11 @@
                 <li>Di: 16:00 bis 20:00 in den Praxisräumen in Graz</li>
                 <li>Ab Oktober 2019 auch in den Praxisräumen in Bruck an der Mur</li>
             </ul>
+            <br />
+            <br />
+            <p class="lead">
+                Ich freue mich auf Sie!
+            </p>
         </div>
     </div>
 </div>
