--- a/uebermich.html
+++ b/uebermich.html
@@ -24,7 +24,7 @@
         </section>
     </div>
     <div class="col-md-6 p-lg-3 mx-auto my-3">
-        <h1 class="display-4 font-weight-bold" id="title-logo">LOGO on TOUR</h1>
+        <h1 class="display-3 font-weight-bold" id="title-logo">LOGO on TOUR</h1>
         <h2>Helena Pernul, BSc, Ihre Wahllogopädin in Graz und Bruck/Mur</h2>
         <h3 class="lead font-weight-normal" style="margin-top: 2em">Mobile Logopädie in Graz, Graz Umgebung, Bruck/Mur und Kapfenberg</h3>
     </div>
@@ -45,7 +45,7 @@
                 <a class="nav-link" href="./uebermich.html">Über mich</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="./schwerpunkte.html">Therapiebereiche</a>
+                <a class="nav-link" href="./schwerpunkte.html">Therapiebereiche/FAQ</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="./tarife.html">Tarife und Terminvergabe</a>
@@ -60,7 +60,12 @@
 <div class="d-md-flex flex-md-equal w-100 my-md-3 pl-md-3">
     <div class="bg-dark mr-md-3 pt-3 px-3 pt-md-4 px-md-5 col-md-6 text-center text-white overflow-hidden" id="about">
         <div class="mb-3 pb-3">
-            <h4 class="display-5 mb-4">Über mich</h4>
+            <h1 class="display-5 mb-4">Ihre mobile Logopädin aus Graz</h1>
+            <p class="lead">Seit 2017 bin ich vor allem im neurologischen Bereich tätig.
+                Hier konnte ich sowohl im Bereich der Stimm- und Sprechtherapie als auch 
+                im Bereich der Sprach- und Schlucktherapie Erfahrungen sammeln.
+            </p>
+            <h2 class="display-5 mb-4 mt-5">Über mich</h2>
             <p class="lead">Mein Name ist Helena Pernul. Ich stamme aus
                 Hermagor in Kärnten. Im Jahr 2016 habe ich nach
                 dreijährigem Studium meine Ausbildung zur
@@ -76,7 +81,7 @@
     </div>
     <div class="bg-light mr-md-3 pt-3 px-3 pt-md-4 px-md-5 col-md-6 text-center overflow-hidden" id="fortbildungen">
         <div class="mb-3 pb-3">
-            <h4 class="display-5 mb-4">Fortbildungen</h4>
+            <h1 class="display-5 mb-4">Fortbildungen</h1>
             <ul class="lead">
                 <li>Ausspracheprüfung für die Praxis (APP) </li>
                 <li>Fortbildung zum Tracheostoma-Berater</li>
