--- a/tarife.html
+++ b/tarife.html
@@ -60,7 +60,7 @@
 <div class="d-md-flex flex-md-equal w-100 my-md-3 pl-md-3">
     <div class="bg-dark mr-md-3 pt-3 px-3 pt-md-4 px-md-5 col-md-6 text-center text-white overflow-hidden" id="tarif">
         <div class="mb-3 pb-3">
-            <h1 class="display-5 mb-4">Logopädische Praxis - Preisangebot</h1>
+            <h1 class="display-5 mb-4">Logopädische Praxis - Tarife</h1>
             <p class="lead">Die Tarife orientieren sich an den Tarifvorschlägen
                 des Verbandes „logopädieaustria“:</p>
             <ul class="lead">
